Trying to fix font issue on mobile chrome.

--- a/stylesheets/_structure.scss
+++ b/stylesheets/_structure.scss
@@ -11,6 +11,10 @@
 body {
     font-family: $main_font;
     color: $secondary_text;
+    -webkit-text-size-adjust: none;
+       -moz-text-size-adjust: none;
+        -ms-text-size-adjust: none;
+            text-size-adjust: none;
 }
 
 header {
